# zephyr-apps

./: .gitignore  CLAUDE.md  PLAN.md  README.md  requirements.txt  west.yml
.github/workflows/: test.yml
apps/ble_data_transfer/: CMakeLists.txt  prj.conf
apps/ble_data_transfer/src/: main.c
apps/ble_wifi_bridge/: CMakeLists.txt  Kconfig  prj.conf
apps/ble_wifi_bridge/src/: ble_nus.c  ble_nus.h  bridge.c  bridge.h  main.c  tcp_socket.c  tcp_socket.h  wifi_manager.c  wifi_manager.h
apps/hello_world/boards/: nrf5340dk_nrf5340_cpuapp.conf
apps/osal_demo/: CMakeLists.txt  prj.conf
apps/osal_demo/.cache/clangd/index/: main.c.5F9E2F03661F0237.idx
apps/osal_demo/src/: main.c
apps/wifi_provision/: CMakeLists.txt  README.md  prj.conf
apps/wifi_provision/.cache/clangd/index/: main.c.140053226E30E574.idx
apps/wifi_provision/boards/: esp32_devkitc_esp32_procpu.conf  nrf7002dk_nrf5340_cpuapp.conf
apps/wifi_provision/src/: main.c  throughput_server.c  throughput_server.h
esp-idf/wifi_provision/: CMakeLists.txt  sdkconfig.defaults
esp-idf/wifi_provision/components/eai_osal/: CMakeLists.txt
esp-idf/wifi_provision/components/throughput_server/: CMakeLists.txt  throughput_server.c
esp-idf/wifi_provision/components/throughput_server/include/: throughput_server.h
esp-idf/wifi_provision/components/wifi_prov_common/: CMakeLists.txt
esp-idf/wifi_provision/components/wifi_prov_common/shim/zephyr/: kernel.h
esp-idf/wifi_provision/components/wifi_prov_common/shim/zephyr/logging/: log.h
esp-idf/wifi_provision/components/wifi_prov_esp/: CMakeLists.txt  wifi_prov_ble_esp.c  wifi_prov_cred_esp.c  wifi_prov_esp.c  wifi_prov_wifi_esp.c
esp-idf/wifi_provision/main/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  Kconfig
lib/crash_log/: manifest.yml
lib/crash_log/tests/: CMakeLists.txt  prj.conf  testcase.yaml
lib/crash_log/tests/boards/: nrf52840dk_nrf52840.overlay  qemu_cortex_m3.overlay
lib/crash_log/tests/src/: main.c
lib/device_shell/: CLAUDE.md  manifest.yml
lib/device_shell/tests/: CMakeLists.txt  prj.conf  testcase.yaml
lib/device_shell/tests/src/: main.c
lib/eai_ble/: CLAUDE.md  CMakeLists.txt  Kconfig  manifest.yml
lib/eai_ble/include/eai_ble/: eai_ble.h
lib/eai_ble/src/freertos/: ble.c
lib/eai_ble/src/posix/: ble.c
lib/eai_ble/src/zephyr/: ble.c
lib/eai_ble/tests/: CMakeLists.txt  compile_commands.json  prj.conf  testcase.yaml
lib/eai_ble/tests/native/: CMakeLists.txt  main.c
lib/eai_ble/tests/src/: main.c
lib/eai_log/: CLAUDE.md  CMakeLists.txt  Kconfig  manifest.yml
lib/eai_log/include/eai_log/: eai_log.h
lib/eai_log/src/: freertos.h  posix.h  zephyr.h
lib/eai_log/tests/native/: CMakeLists.txt  main.c
lib/eai_osal/: CLAUDE.md  CMakeLists.txt  Kconfig  manifest.yml
lib/eai_osal/include/eai_osal/: critical.h  eai_osal.h  event.h  mutex.h  queue.h  semaphore.h  thread.h  time.h  timer.h  types.h  workqueue.h
lib/eai_osal/src/freertos/: workqueue.c
lib/eai_osal/src/posix/: critical.c  event.c  internal.h  mutex.c  queue.c  semaphore.c  thread.c  time.c  timer.c  types.h  workqueue.c
lib/eai_osal/src/zephyr/: critical.c  event.c  internal.h  mutex.c  queue.c  semaphore.c  thread.c  time.c  timer.c  types.h  workqueue.c
lib/eai_osal/tests/: CMakeLists.txt  prj.conf  testcase.yaml
lib/eai_osal/tests/.cache/clangd/index/: main.c.97A1A55DED0CFEE8.idx
lib/eai_osal/tests/native/: CMakeLists.txt  main.c
lib/eai_osal/tests/src/: main.c
lib/eai_settings/: CLAUDE.md  CMakeLists.txt  Kconfig  manifest.yml
lib/eai_settings/include/eai_settings/: eai_settings.h
lib/eai_settings/src/freertos/: settings.c
lib/eai_settings/src/posix/: settings.c
lib/eai_settings/src/zephyr/: settings.c
lib/eai_settings/tests/: CMakeLists.txt  prj.conf  testcase.yaml
lib/eai_settings/tests/boards/: qemu_cortex_m3_ti_lm3s6965.overlay
lib/eai_settings/tests/native/: CMakeLists.txt  main.c
lib/eai_settings/tests/src/: main.c
lib/eai_wifi/: CLAUDE.md  CMakeLists.txt  Kconfig  manifest.yml
lib/eai_wifi/include/eai_wifi/: eai_wifi.h
lib/eai_wifi/src/freertos/: wifi.c
lib/eai_wifi/src/posix/: wifi.c
lib/eai_wifi/src/zephyr/: wifi.c
lib/eai_wifi/tests/: CMakeLists.txt  compile_commands.json  prj.conf  testcase.yaml
lib/eai_wifi/tests/native/: CMakeLists.txt  main.c
lib/eai_wifi/tests/src/: main.c
lib/wifi_prov/: CLAUDE.md  CMakeLists.txt  Kconfig  manifest.yml
lib/wifi_prov/include/wifi_prov/: wifi_prov.h  wifi_prov_msg.h  wifi_prov_types.h
lib/wifi_prov/src/: wifi_prov.c  wifi_prov_ble.c  wifi_prov_cred.c  wifi_prov_msg.c  wifi_prov_sm.c  wifi_prov_stub.c  wifi_prov_wifi.c
lib/wifi_prov/tests/: CMakeLists.txt  prj.conf  testcase.yaml
lib/wifi_prov/tests/src/: test_cred.c  test_msg.c  test_sm.c
linux/: README.md
linux/alif-e7/: README.md  images  stage-ospi.sh
linux/alif-e7/setools/: app-device-config.json  appkit-e7.dtb.mram-bak  bl32.bin.mram-bak  bl32.bin.pre-usb-phy  flash-bl32-only.json  flash-bl32-restore.json  linux-boot-e7-ospi-jlink.json  linux-boot-e7-ospi-rtt.json  linux-boot-e7-ospi-usbphy.json  linux-boot-e7-ospi.json  xipImage-ospi
linux/alif-e8/setools/: README.md  app-device-config.json  cramfs-xip.img  devkit-e8-ospi-phram.dtb  devkit-e8.dtb  linux-boot-e8-ospi.json  linux-boot-e8.json  xipImage
linux/apps/: Makefile
linux/apps/display_test/: Makefile
linux/apps/hello/: Makefile
linux/apps/rpmsg_echo/: Makefile
linux/docker/: Dockerfile.alif  Dockerfile.alif-e7  Dockerfile.zephyr  entrypoint-zephyr.sh  setup-workspace.sh
linux/yocto/: flash-over-ssh.sh
linux/yocto/meta-eai/conf/: layer.conf
linux/yocto/meta-eai/recipes-apps/picoclaw/: picoclaw-conf_1.0.bb
linux/yocto/meta-eai/recipes-connectivity/usb-ecm/: usb-ecm_1.0.bb
linux/yocto/meta-eai/recipes-kernel/linux/: linux-alif_%.bbappend  (+1 more)
tools/: uart_cmd.py  usb_phy_reset.py
tools/ospi-programmer/: CLAUDE.md  Makefile  linker.ld
tools/ospi-programmer/lib/: SEGGER_RTT_Conf.h
tools/ospi-programmer/src/: crc32.c  crc32.h  libc_stubs.c  main.c  ospi_drv.c  ospi_drv.h  ospi_flash.c  ospi_flash.h  protocol.h  startup.S
(+8 files in other folders)
